--- a/simplepin/Info.plist
+++ b/simplepin/Info.plist
@@ -20,6 +20,19 @@
 	<string>1.0.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>ml.simplepin</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>simplepin</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>11</string>
 	<key>Fabric</key>
