--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "keeptheball",
-    "description": "This project is really great.",
-    "slug": "keeptheball",
+    "name": "Simplepin",
+    "description": "A simple app for your Pinboard bookmarks",
+    "slug": "simplepin",
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
