--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "expo": "^31.0.4",
+    "expo-cli": "^2.4.3",
+    "g": "^2.0.1",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
