--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "query-string": "^6.2.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
+    "react-native-iphone-x-helper": "^1.2.0",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
