--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^31.0.4",
     "expo-cli": "^2.6.14",
     "g": "^2.0.1",
+    "is-url": "^1.2.4",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
