--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Simplepin",
     "description": "A simple app for your Pinboard bookmarks",
     "slug": "simplepin",
-    "privacy": "public",
+    "privacy": "unlisted",
     "sdkVersion": "31.0.0",
     "platforms": ["ios", "android"],
     "version": "2.0.0",
