--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "g": "^2.0.1",
     "is-url": "^1.2.4",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "16.5.0",
