--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
     "react-native-iphone-x-helper": "^1.2.0",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-rss-parser": "^1.3.0",
     "react-navigation": "^2.18.2"
   },
