--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
+    "eslint": "./node_modules/.bin/eslint .",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
