--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "buffer": "^5.2.1",
+    "events": "^3.0.0",
     "expo": "^31.0.4",
     "expo-cli": "^2.6.14",
     "g": "^2.0.1",
     "is-url": "^1.2.4",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "16.5.0",
@@ -23,7 +26,11 @@
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-rss-parser": "^1.3.0",
-    "react-navigation": "^2.18.2"
+    "react-navigation": "^2.18.2",
+    "readability-node": "^0.1.0",
+    "sanitize-html": "^1.20.0",
+    "url-parse": "^1.4.4",
+    "xmldom-silent": "^0.1.19"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
