--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "sdkVersion": "31.0.0",
     "platforms": ["ios", "android"],
     "version": "2.0.0",
+    "primaryColor": "#0066CC",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
