Add bundle identifier to app.json

--- a/app.json
+++ b/app.json
@@ -24,7 +24,11 @@
       "assets/*"
     ],
     "ios": {
-      "supportsTablet": true
-    }
+      "supportsTablet": true,
+      "bundleIdentifier": "ml.simplepin"
+    },
+    "android": {
+      "package": "ml.simplepin",
+    },
   }
 }
