--- a/app.json
+++ b/app.json
@@ -29,6 +29,10 @@
     },
     "android": {
       "package": "ml.simplepin",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/icon.png",
+        "backgroundColor": "#0066CC",
+      },
     },
   }
 }
