--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,12 @@
 {
-  "presets": ["babel-preset-expo"],
+  "presets": [
+    "babel-preset-react-native-stage-0/decorator-support"
+  ],
   "env": {
     "development": {
-      "plugins": ["@babel/plugin-transform-react-jsx-source"]
+      "plugins": [
+        "@babel/plugin-transform-react-jsx-source"
+      ]
     }
   }
 }
