--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "app",
-  "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
     "eslint": "./node_modules/.bin/eslint .",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "buffer": "^5.2.1",
     "events": "^3.0.0",
-    "expo": "^31.0.4",
     "expo-cli": "^2.6.14",
     "g": "^2.0.1",
     "is-url": "^1.2.4",
@@ -22,7 +20,7 @@
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
+    "react-native": "0.57.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-rss-parser": "^1.3.0",
@@ -34,6 +32,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "eslint": "^5.9.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.14.0",
