--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-  "name": "app",
+  "name": "Simplepin",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "eslint": "./node_modules/.bin/eslint .",
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
   },
   "dependencies": {
-    "babel-preset-react-native": "^4.0.1",
+    "@react-native-community/async-storage": "^1.4.0",
+    "@react-native-community/netinfo": "^2.0.10",
     "buffer": "^5.2.1",
     "events": "^3.0.0",
-    "expo-cli": "^2.6.14",
-    "g": "^2.0.1",
     "is-url": "^1.2.4",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "path": "^0.12.7",
-    "prop-types": "^15.6.2",
-    "query-string": "^6.2.0",
-    "react": "16.5.0",
-    "react-native": "0.57.1",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.5.0",
+    "react": "16.8.3",
+    "react-native": "0.59.8",
+    "react-native-gesture-handler": "^1.2.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-rss-parser": "^1.3.0",
-    "react-navigation": "^2.18.2",
+    "react-native-webview": "^5.8.2",
+    "react-navigation": "^3.9.2",
     "readability-node": "^0.1.0",
-    "sanitize-html": "^1.20.0",
-    "url-parse": "^1.4.4",
+    "sanitize-html": "^1.20.1",
+    "url": "^0.11.0",
+    "url-parse": "^1.4.7",
     "xmldom-silent": "^0.1.19"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.9.0",
-    "eslint-plugin-chai-friendly": "^0.4.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.0.0",
-    "eslint-plugin-react": "^7.11.1"
+    "@babel/core": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-test-renderer": "16.8.3"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
