--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "query-string": "^6.5.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-device-info": "^1.7.0",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-rss-parser": "^1.3.0",
+    "react-native-safe-area-view": "^0.14.3",
     "react-native-webview": "^5.8.2",
     "react-navigation": "^3.9.2",
     "readability-node": "^0.1.0",
